# aerobotics-technical-assessment

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yaml  main.py  missing_trees.py  pyproject.toml  test_main.py  test_missing_trees.py
missing_tree_api/app/: main.py  test.py  test_curve.py
missing_tree_api/app/aerobotics/: client.py  models.py
missing_tree_api/app/clients/: aerobotics.py
missing_tree_api/app/orchard_analysis/: dualaxisscanner.py  geovector.py  statistics.py
src/missing_tree_api/app/: main.py
src/missing_tree_api/client/aerobotics/: client.py  models.py
src/missing_tree_api/core/: orchardscanner.py
src/missing_tree_api/models/: schemas.py
tests/: test_builder.py  test_missing_trees.py  test_orchard_scanner.py  visualise_missing_trees.py
